Hack a few things to get k8s 1.16 deployable
Need to fix up the wks image still, then see if I can add 1.17.

--- a/addons/weave-net/weave-net.yaml
+++ b/addons/weave-net/weave-net.yaml
@@ -92,19 +92,23 @@ items:
       - kind: ServiceAccount
         name: weave-net
         namespace: kube-system
-  - apiVersion: extensions/v1beta1
+  - apiVersion: apps/v1
     kind: DaemonSet
     metadata:
       name: weave-net
       labels:
         name: weave-net
+        k8s-app: weave-net
       namespace: kube-system
     spec:
+      selector:
+        matchLabels:
+          k8s-app: weave-net
       minReadySeconds: 5
       template:
         metadata:
           labels:
-            name: weave-net
+            k8s-app: weave-net
         spec:
           containers:
             - name: weave
